# home-delivery-platform

./: README.md
payment-service/: README.md  pyproject.toml
payment-service/src/config/: settings.py
payment-service/src/models/: payment_order.py
payment-service/src/services/: wechat_service.py
payment-service/src/utils/: idempotency.py  redis_lock.py
perf-test-jmeter/: login.jmx  orders.jmx  payment-webhook.jmx
perf-test-k6/: orders.js
security-scan/: 01-README.md  requirements.txt
security-scan/scripts/: sql_injection_scan.py
service-worker-pwa/: index.html  package.json  vite.config.js
service-worker-pwa/src/: App.vue  main.js  router.js  style.css
service-worker-pwa/src/pages/: Dashboard.vue
user-frontend/: package.json
user-frontend/public/: index.html  manifest.json
user-frontend/src/: App.tsx  index.css  index.tsx
user-frontend/src/components/: Layout.tsx
user-frontend/src/pages/: AddressManagementPage.tsx  HomePage.tsx  OrderConfirmPage.tsx  PersonalCenterPage.tsx  ServiceDetailPage.tsx  ServiceListPage.tsx
user-frontend/src/slices/: addressSlice.ts  store.ts  userSlice.ts
user-frontend/src/styles/: GlobalStyles.tsx
